tests/baselines/reference/parserForOfStatement5.errors.txt
parserForOfStatement5.ts(1,10): error TS2483: The left-hand side of a 'for...of' statement cannot use a type annotation.
parserForOfStatement5.ts(1,23): error TS2304: Cannot find name 'X'.


==== parserForOfStatement5.ts (2 errors) ====
    for (var a: number of X) {
             ~
!!! error TS2483: The left-hand side of a 'for...of' statement cannot use a type annotation.
                          ~
!!! error TS2304: Cannot find name 'X'.
    }